--- a/eclipse/GregTech.lang
+++ b/eclipse/GregTech.lang
@@ -4162,6 +4162,42 @@ languagefile {
     S:TileEntity_DESCRIPTION_284_Index_0=Universal Machine for Metal Working
     S:TileEntity_DESCRIPTION_285_Index_0=Universal Machine for Metal Working
     S:TileEntity_DESCRIPTION_28_Index_0=UHV -> UV (Use Soft Mallet to invert)
+    S:TileEntity_DESCRIPTION_29000_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29000_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29000_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29001_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29001_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29001_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29002_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29002_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29002_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29003_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29003_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29003_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29004_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29004_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29004_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29005_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29005_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29005_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29006_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29006_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29006_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29007_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29007_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29007_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29008_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29008_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29008_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29009_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29009_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29009_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29010_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29010_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29010_Index_2=Loss/Meter/Ampere:  %s EU-Volt
+    S:TileEntity_DESCRIPTION_29011_Index_0=Max Voltage:  %s
+    S:TileEntity_DESCRIPTION_29011_Index_1=Max Amperage:  %s
+    S:TileEntity_DESCRIPTION_29011_Index_2=Loss/Meter/Ampere:  %s EU-Volt
     S:TileEntity_DESCRIPTION_291_Index_0=Produces Rods more efficiently
     S:TileEntity_DESCRIPTION_292_Index_0=Produces Rods more efficiently
     S:TileEntity_DESCRIPTION_293_Index_0=Produces Rods more efficiently
@@ -5239,6 +5275,134 @@ languagefile {
     S:bw.recipe.BacteriaVat=Bacterial Vat
     S:bw.recipe.biolab=Bio Lab
     S:bw.recipe.cal=Circuit Assembly Line
+    S:comb.almandine=Almandine Comb
+    S:comb.aluminium=Aluminium Comb
+    S:comb.amber=Amber Comb
+    S:comb.americum=Americum Comb
+    S:comb.apatite=Apatite Comb
+    S:comb.arsenic=Arsenic Comb
+    S:comb.ash=Ash Comb
+    S:comb.astralsilver=Astralsilver Comb
+    S:comb.barnarda=Barnarda Comb
+    S:comb.bauxite=Bauxite Comb
+    S:comb.blackplutonium=Blackplutonium Comb
+    S:comb.callistoice=Callistoice Comb
+    S:comb.centauri=Centauri Comb
+    S:comb.certus=Certus Comb
+    S:comb.chromium=Chromium Comb
+    S:comb.coal=Coal Comb
+    S:comb.conductiveiron=Conductiveiron Comb
+    S:comb.coolant=Coolant Comb
+    S:comb.copper=Copper Comb
+    S:comb.cosmicneutronium=Cosmicneutronium Comb
+    S:comb.cryotheum=Cryotheum Comb
+    S:comb.d-o-b=D-o-b Comb
+    S:comb.darksteel=Darksteel Comb
+    S:comb.desh=Desh Comb
+    S:comb.diamond=Diamond Comb
+    S:comb.divided=Divided Comb
+    S:comb.electricalsteel=Electricalsteel Comb
+    S:comb.electrotine=Electrotine Comb
+    S:comb.emerald=Emerald Comb
+    S:comb.enderium=Enderium Comb
+    S:comb.energeticalloy=Energeticalloy Comb
+    S:comb.energy=Energy Comb
+    S:comb.firestone=Firestone Comb
+    S:comb.fluix=Fluix Comb
+    S:comb.gallium=Gallium Comb
+    S:comb.gold=Gold Comb
+    S:comb.grossular=Grossular Comb
+    S:comb.haumea=Haumea Comb
+    S:comb.hydra=Hydra Comb
+    S:comb.infinity=Infinity Comb
+    S:comb.infinitycatalyst=Infinitycatalyst Comb
+    S:comb.iridium=Iridium Comb
+    S:comb.iron=Iron Comb
+    S:comb.jupiter=Jupiter Comb
+    S:comb.lapis=Lapis Comb
+    S:comb.lapotron=Lapotron Comb
+    S:comb.lead=Lead Comb
+    S:comb.ledox=Ledox Comb
+    S:comb.lich=Lich Comb
+    S:comb.lignite=Lignite Comb
+    S:comb.lithium=Lithium Comb
+    S:comb.lutetium=Lutetium Comb
+    S:comb.magnesium=Magnesium Comb
+    S:comb.makemake=Makemake Comb
+    S:comb.manganese=Manganese Comb
+    S:comb.mars=Mars Comb
+    S:comb.mercury=Mercury Comb
+    S:comb.meteoriciron=Meteoriciron Comb
+    S:comb.mithril=Mithril Comb
+    S:comb.molybdenum=Molybdenum Comb
+    S:comb.moon=Moon Comb
+    S:comb.mysteriouscrystal=Mysteriouscrystal Comb
+    S:comb.mytryl=Mytryl Comb
+    S:comb.naga=Naga Comb
+    S:comb.naquadah=Naquadah Comb
+    S:comb.naquadria=Naquadria Comb
+    S:comb.neptun=Neptun Comb
+    S:comb.neutronium=Neutronium Comb
+    S:comb.nickel=Nickel Comb
+    S:comb.oil=Oil Comb
+    S:comb.olivine=Olivine Comb
+    S:comb.oriharukon=Oriharukon Comb
+    S:comb.osmium=Osmium Comb
+    S:comb.platinum=Platinum Comb
+    S:comb.pluto=Pluto Comb
+    S:comb.plutonium=Plutonium Comb
+    S:comb.pulsatingiron=Pulsatingiron Comb
+    S:comb.pyrope=Pyrope Comb
+    S:comb.pyrotheum=Pyrotheum Comb
+    S:comb.quantium=Quantium Comb
+    S:comb.quicksilver=Quicksilver Comb
+    S:comb.rareearth=Rareearth Comb
+    S:comb.redalloy=Redalloy Comb
+    S:comb.redgarnet=Redgarnet Comb
+    S:comb.redstone=Redstone Comb
+    S:comb.redstonealloy=Redstonealloy Comb
+    S:comb.ruby=Ruby Comb
+    S:comb.salismundus=Salismundus Comb
+    S:comb.salt=Salt Comb
+    S:comb.sapphire=Sapphire Comb
+    S:comb.saturn=Saturn Comb
+    S:comb.shadowmetal=Shadowmetal Comb
+    S:comb.silver=Silver Comb
+    S:comb.slag=Slag Comb
+    S:comb.snowqueen=Snowqueen Comb
+    S:comb.space=Space Comb
+    S:comb.sparkling=Sparkling Comb
+    S:comb.stainlesssteel=Stainlesssteel Comb
+    S:comb.steel=Steel Comb
+    S:comb.stickyresin=Stickyresin Comb
+    S:comb.stone=Stone Comb
+    S:comb.sulfur=Sulfur Comb
+    S:comb.tainted=Tainted Comb
+    S:comb.tceti=Tceti Comb
+    S:comb.thauminite=Thauminite Comb
+    S:comb.thaumiumdust=Thaumiumdust Comb
+    S:comb.thaumiumshard=Thaumiumshard Comb
+    S:comb.thorium=Thorium Comb
+    S:comb.tin=Tin Comb
+    S:comb.titanium=Titanium Comb
+    S:comb.trinium=Trinium Comb
+    S:comb.tungsten=Tungsten Comb
+    S:comb.uranium=Uranium Comb
+    S:comb.uranus=Uranus Comb
+    S:comb.urghast=Urghast Comb
+    S:comb.vega=Vega Comb
+    S:comb.venus=Venus Comb
+    S:comb.vibrantalloy=Vibrantalloy Comb
+    S:comb.yellowgarnet=Yellowgarnet Comb
+    S:comb.zinc=Zinc Comb
+    S:drop.coolant=Coolant Drop
+    S:"drop.hot coolant"=Hot coolant Drop
+    S:"drop.hydra blood"=Hydra blood Drop
+    S:"drop.lapis coolant"=Lapis coolant Drop
+    S:drop.oil=Oil Drop
+    S:drop.oxygen=Oxygen Drop
+    S:"drop.small mutagen catalyst"=Small mutagen catalyst Drop
+    S:"drop.snowqueen blood"=Snowqueen blood Drop
     S:enchantment.damage.endermen=Disjunction
     S:enchantment.damage.radioactivity=Radioactivity
     S:"fluid.1,1dimethylhydrazine"=1,1-Dimethylhydrazine
@@ -5947,6 +6111,138 @@ languagefile {
     S:fluid.woodgas=Wood Gas
     S:fluid.woodtar=Wood Tar
     S:fluid.woodvinegar=Wood Vinegar
+    S:for.bees.species.acentauri=Acentauri
+    S:for.bees.species.aluminium=Aluminium
+    S:for.bees.species.amber=Amber
+    S:for.bees.species.americium=Americium
+    S:for.bees.species.apatite=Apatite
+    S:for.bees.species.arsenic=Arsenic
+    S:for.bees.species.ash=Ash
+    S:for.bees.species.astralsilver=Astralsilver
+    S:for.bees.species.barnarda=Barnarda
+    S:for.bees.species.barnardac=Barnardac
+    S:for.bees.species.barnardae=Barnardae
+    S:for.bees.species.barnardaf=Barnardaf
+    S:for.bees.species.blackplutonium=Blackplutonium
+    S:for.bees.species.callisto=Callisto
+    S:for.bees.species.callistoice=Callistoice
+    S:for.bees.species.centauri=Centauri
+    S:for.bees.species.ceres=Ceres
+    S:for.bees.species.certus=Certus
+    S:for.bees.species.chrome=Chrome
+    S:for.bees.species.clay=Clay
+    S:for.bees.species.coal=Coal
+    S:for.bees.species.conductiveiron=Conductiveiron
+    S:for.bees.species.coolant=Coolant
+    S:for.bees.species.copper=Copper
+    S:for.bees.species.cosmicneutronium=Cosmicneutronium
+    S:for.bees.species.cryotheum=Cryotheum
+    S:for.bees.species.darksteel=Darksteel
+    S:for.bees.species.deimos=Deimos
+    S:for.bees.species.desh=Desh
+    S:for.bees.species.diamond=Diamond
+    S:for.bees.species.divided=Divided
+    S:for.bees.species.dob=Dob
+    S:for.bees.species.electricalsteel=Electricalsteel
+    S:for.bees.species.electrotine=Electrotine
+    S:for.bees.species.emerald=Emerald
+    S:for.bees.species.enceladus=Enceladus
+    S:for.bees.species.enderium=Enderium
+    S:for.bees.species.energeticalloy=Energeticalloy
+    S:for.bees.species.energy=Energy
+    S:for.bees.species.europa=Europa
+    S:for.bees.species.fertilizer=Fertilizer
+    S:for.bees.species.firestone=Firestone
+    S:for.bees.species.fluix=Fluix
+    S:for.bees.species.ganymede=Ganymede
+    S:for.bees.species.gold=Gold
+    S:for.bees.species.haumea=Haumea
+    S:for.bees.species.hydra=Hydra
+    S:for.bees.species.infinity=Infinity
+    S:for.bees.species.infinitycatalyst=Infinitycatalyst
+    S:for.bees.species.io=Io
+    S:for.bees.species.iridium=Iridium
+    S:for.bees.species.iron=Iron
+    S:for.bees.species.jupiter=Jupiter
+    S:for.bees.species.lapis=Lapis
+    S:for.bees.species.lapotron=Lapotron
+    S:for.bees.species.lead=Lead
+    S:for.bees.species.ledox=Ledox
+    S:for.bees.species.lich=Lich
+    S:for.bees.species.lithium=Lithium
+    S:for.bees.species.lutetium=Lutetium
+    S:for.bees.species.makemake=Makemake
+    S:for.bees.species.manganese=Manganese
+    S:for.bees.species.mars=Mars
+    S:for.bees.species.mercury=Mercury
+    S:for.bees.species.meteoriciron=Meteoriciron
+    S:for.bees.species.miranda=Miranda
+    S:for.bees.species.mithril=Mithril
+    S:for.bees.species.moon=Moon
+    S:for.bees.species.mysteriouscrystal=Mysteriouscrystal
+    S:for.bees.species.mytryl=Mytryl
+    S:for.bees.species.naga=Naga
+    S:for.bees.species.naquadah=Naquadah
+    S:for.bees.species.naquadria=Naquadria
+    S:for.bees.species.neptune=Neptune
+    S:for.bees.species.neutronium=Neutronium
+    S:for.bees.species.nickel=Nickel
+    S:for.bees.species.oberon=Oberon
+    S:for.bees.species.oil=Oil
+    S:for.bees.species.olivine=Olivine
+    S:for.bees.species.oriharukon=Oriharukon
+    S:for.bees.species.osmium=Osmium
+    S:for.bees.species.peat=Peat
+    S:for.bees.species.phobos=Phobos
+    S:for.bees.species.platinum=Platinum
+    S:for.bees.species.pluto=Pluto
+    S:for.bees.species.plutonium=Plutonium
+    S:for.bees.species.proteus=Proteus
+    S:for.bees.species.pulsatingiron=Pulsatingiron
+    S:for.bees.species.pyrotheum=Pyrotheum
+    S:for.bees.species.quantium=Quantium
+    S:for.bees.species.quicksilver=Quicksilver
+    S:for.bees.species.redalloy=Redalloy
+    S:for.bees.species.redgarnet=Redgarnet
+    S:for.bees.species.redstone=Redstone
+    S:for.bees.species.redstonealloy=Redstonealloy
+    S:for.bees.species.ruby=Ruby
+    S:for.bees.species.salismundus=Salismundus
+    S:for.bees.species.salty=Salty
+    S:for.bees.species.sandwich=Sandwich
+    S:for.bees.species.sapphire=Sapphire
+    S:for.bees.species.saturn=Saturn
+    S:for.bees.species.shadowmetal=Shadowmetal
+    S:for.bees.species.silver=Silver
+    S:for.bees.species.slimeball=Slimeball
+    S:for.bees.species.snowqueen=Snowqueen
+    S:for.bees.species.space=Space
+    S:for.bees.species.sparkeling=Sparkeling
+    S:for.bees.species.stainlesssteel=Stainlesssteel
+    S:for.bees.species.steel=Steel
+    S:for.bees.species.stickyresin=Stickyresin
+    S:for.bees.species.tainted=Tainted
+    S:for.bees.species.tceti=Tceti
+    S:for.bees.species.tcetie=Tcetie
+    S:for.bees.species.thauminite=Thauminite
+    S:for.bees.species.thaumiumdust=Thaumiumdust
+    S:for.bees.species.thaumiumshard=Thaumiumshard
+    S:for.bees.species.thorium=Thorium
+    S:for.bees.species.tin=Tin
+    S:for.bees.species.titan=Titan
+    S:for.bees.species.titanium=Titanium
+    S:for.bees.species.trinium=Trinium
+    S:for.bees.species.triton=Triton
+    S:for.bees.species.tungsten=Tungsten
+    S:for.bees.species.uranium=Uranium
+    S:for.bees.species.uranus=Uranus
+    S:for.bees.species.urghast=Urghast
+    S:for.bees.species.vega=Vega
+    S:for.bees.species.vegab=Vegab
+    S:for.bees.species.venus=Venus
+    S:for.bees.species.vibrantalloy=Vibrantalloy
+    S:for.bees.species.yellowgarnet=Yellowgarnet
+    S:for.bees.species.zinc=Zinc
     S:gt.1080k_Space_Coolantcell.name=1080k Sp Coolant Cell
     S:gt.180k_Helium_Coolantcell.name=180k He Coolant Cell
     S:gt.180k_NaK_Coolantcell.name=180k NaK Coolantcell
@@ -6014,6 +6310,7 @@ languagefile {
     S:gt.behaviour.plunger.item=Clears Items from Pipes
     S:gt.behaviour.prospecting=Usable for Prospecting
     S:gt.behaviour.scanning=Can scan Blocks in World
+    S:gt.behaviour.scoop=Catches Butterflies on Leftclick
     S:gt.behaviour.sense=Rightclick to harvest Crop Sticks
     S:gt.behaviour.sensorkit.tooltip=Used to display Information using the Mod Nuclear Control
     S:gt.behaviour.softhammer=Activates and Deactivates Machines
@@ -6813,6 +7110,12 @@ languagefile {
     S:gt.blockmachines.cable.steel.08.name=8x %material Cable
     S:gt.blockmachines.cable.steel.12.name=12x %material Cable
     S:gt.blockmachines.cable.steel.16.name=16x %material Cable
+    S:gt.blockmachines.cable.testmaterial.01.name=1x %material Cable
+    S:gt.blockmachines.cable.testmaterial.02.name=2x %material Cable
+    S:gt.blockmachines.cable.testmaterial.04.name=4x %material Cable
+    S:gt.blockmachines.cable.testmaterial.08.name=8x %material Cable
+    S:gt.blockmachines.cable.testmaterial.12.name=12x %material Cable
+    S:gt.blockmachines.cable.testmaterial.16.name=16x %material Cable
     S:gt.blockmachines.cable.tetraindiumditindibariumtitaniumheptacoppertetrakaidekaoxid.01.name=1x %material Cable
     S:gt.blockmachines.cable.tetraindiumditindibariumtitaniumheptacoppertetrakaidekaoxid.02.name=2x %material Cable
     S:gt.blockmachines.cable.tetraindiumditindibariumtitaniumheptacoppertetrakaidekaoxid.04.name=4x %material Cable
@@ -7672,6 +7975,12 @@ languagefile {
     S:gt.blockmachines.wire.superconductorzpm.08.name=8x %material Wire
     S:gt.blockmachines.wire.superconductorzpm.12.name=12x %material Wire
     S:gt.blockmachines.wire.superconductorzpm.16.name=16x %material Wire
+    S:gt.blockmachines.wire.testmaterial.01.name=1x %material Wire
+    S:gt.blockmachines.wire.testmaterial.02.name=2x %material Wire
+    S:gt.blockmachines.wire.testmaterial.04.name=4x %material Wire
+    S:gt.blockmachines.wire.testmaterial.08.name=8x %material Wire
+    S:gt.blockmachines.wire.testmaterial.12.name=12x %material Wire
+    S:gt.blockmachines.wire.testmaterial.16.name=16x %material Wire
     S:gt.blockmachines.wire.tetraindiumditindibariumtitaniumheptacoppertetrakaidekaoxid.01.name=1x %material Wire
     S:gt.blockmachines.wire.tetraindiumditindibariumtitaniumheptacoppertetrakaidekaoxid.02.name=2x %material Wire
     S:gt.blockmachines.wire.tetraindiumditindibariumtitaniumheptacoppertetrakaidekaoxid.04.name=4x %material Wire
@@ -20264,6 +20573,8 @@ languagefile {
     S:gt.metaitem.01.30769.tooltip=Wb
     S:gt.metaitem.01.30776.name=%material Cell
     S:gt.metaitem.01.30776.tooltip=
+    S:gt.metaitem.01.30777.name=%material Cell
+    S:gt.metaitem.01.30777.tooltip=
     S:gt.metaitem.01.3078.name=Impure Pile of %material Dust
     S:gt.metaitem.01.3078.tooltip=Lu
     S:gt.metaitem.01.308.name=Tiny Pile of %material Dust
@@ -20486,6 +20797,8 @@ languagefile {
     S:gt.metaitem.01.31765.tooltip=SpWb
     S:gt.metaitem.01.31769.name=%material Plasma Cell
     S:gt.metaitem.01.31769.tooltip=Wb
+    S:gt.metaitem.01.31777.name=%material Plasma Cell
+    S:gt.metaitem.01.31777.tooltip=
     S:gt.metaitem.01.319.name=Tiny Pile of %material Dust
     S:gt.metaitem.01.319.tooltip=Ad
     S:gt.metaitem.01.31975.name=%material Plasma Cell
@@ -23604,6 +23917,8 @@ languagefile {
     S:gt.metaitem.01.876.tooltip=
     S:gt.metaitem.01.877.name=Tiny Pile of %material Dust
     S:gt.metaitem.01.877.tooltip=Mg₃Si₄H₂O₁₂
+    S:gt.metaitem.01.8777.name=%material
+    S:gt.metaitem.01.8777.tooltip=
     S:gt.metaitem.01.878.name=Tiny Pile of %material Dust
     S:gt.metaitem.01.878.tooltip=
     S:gt.metaitem.01.879.name=Tiny Pile of Chad
@@ -30190,6 +30505,8 @@ languagefile {
     S:metaitem.01.tooltip.nqgen=Can be used as Enriched Naquadah Fuel Substitute
     S:metaitem.01.tooltip.purify=Throw into Cauldron to get clean Dust
     S:metaitem.01.tooltip.purify.2=Throw into Cauldron to get clean crushed Ore
+    S:pollen.matrix=Matrix Pollen
+    S:propolis.zoko=Zoko Propolis
 }
 
 
